
The benefits of being a passenger on a long road trip...  The
beginnings of EWMH opacity (a la xcompmgr) support and (hopefully)
UTF-8 support.  Both as yet untested.
----------------------------------------------------------------------
Fri Dec 17 16:35:31 2004                        Michael Jennings (mej)

Another attempt (and failure) at UTF-8 support.  Disabled until
someone can help me out.

If you know iconv(), please have a look at the FIXME_BLOCK starting at
line 3509 of src/command.c.
----------------------------------------------------------------------
Mon Dec 20 14:31:33 2004                        Michael Jennings (mej)

Okay, so my first problem was that I didn't pay close enough attention
to the iconv_open() man page and got the parameter order wrong.  Duh.
Thanks to Sytse Wielinga <s.b.wielinga@student.utwente.nl> for
noticing that.

kwo suggested using XmbDrawString(), but that causes font problems I'm
not ready to diagnose just yet.
----------------------------------------------------------------------
Wed Jan  5 15:17:51 2005                        Michael Jennings (mej)

Spec dependency fixes.
----------------------------------------------------------------------
Wed Feb 23 15:37:40 2005                        Michael Jennings (mej)

Merged in previous autoFUCK changes from libast.

Added a feature to specify a command to be run in place of the normal
PC speaker beep.
----------------------------------------------------------------------
Tue Mar 15 16:44:09 2005                        Michael Jennings (mej)

Reverted part of a patch from Chris Schoeneman <crs23@bigfoot.com>
(changelog entry "Fri Jun 25 17:48:24 2004") which broke dead keys and
compose-key sequences.

Fixed autoSHIT for dist/distcheck/distclean/maintainer-clean and newer
autoSHIT versions.

Fixed error in saving of cut_chars attribute.

Fixed saving/handling of beep_command attribute.
----------------------------------------------------------------------